fix: update CSS for menu content and chefs section styling, update and refactored js for more readability and performance added inline css and local font to preload fonts faster

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -913,7 +913,7 @@ section {
 }
 
 .menu .menu-content::after {
-  content: "......................................................................""....................................................................""....................................................................";
+  content: "......................................................................" "...................................................................." "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
@@ -1221,8 +1221,7 @@ section {
 # Chefs
 --------------------------------------------------------------*/
 .chefs {
-  background: url("../img/chefs-bg.jpg") center center no-repeat;
-  background-size: cover;
+  background: rgba(255, 255, 255, 0.8);
   padding: 60px 0;
   position: relative;
 }
